--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 @font-face {
-    font-family: runescape;
-    src: url(fonts/runescape_uf.woff);
+	font-family: runescape;
+	src: url(fonts/runescape_uf.woff);
 }
+
 * {
 	margin: 0px;
 	padding: 0px;
 }
+
 body {
 	background-color: black;
 	font-family: runescape;
@@ -17,16 +19,25 @@ body {
 .hide {
 	display: none;
 }
+
 .show {
 	display: initial;
 }
+
 .opacHide {
 	opacity: 0;
 }
+
 .opacShow {
 	opacity: 0.1;
 }
 
+
+#saveGame, #loadGame, #clearSave {
+	color: white;
+	text-decoration: underline;
+	cursor: pointer;
+}
 
 
 /*  GAME GRID  */
@@ -43,6 +54,7 @@ body {
 }
 
 
+
 /* GAMEPLAY SCREEN */
 
 #gameplay-screen {
@@ -53,7 +65,8 @@ body {
 	padding: 6px;
 	color: white;
 }
-	/* Skill Screen */
+
+/* Skill Screen */
 #skill-screen {
 	display: grid;
 	grid-template-rows: 23px 286px;
@@ -61,29 +74,32 @@ body {
 	grid-gap: 6px;
 	background: url("images/skill page.png");
 }
+
 #skill-screen #title {
 	margin-top: 3px;
 	color: rgb(249, 152, 31);
 	text-align: center;
 }
+
 #title-bar {
 	display: grid;
 	grid-template-columns: auto 23px;
 }
 
-	/* X Button */
-#x-button  {
+/* x Button */
+#x-button {
 	height: 21px;
 	width: 21px;
 	margin: 1px;
 	background: url("images/x\ button.png");
 }
+
 #x-button:active {
 	-webkit-transform: rotate(180deg);
 	transform: rotate(180deg);
 }
 
-	/* Screen Content */
+/* Screen Content */
 #level-exp-info {
 	display: grid;
 	grid-template-rows: 15px 10px 5px;
@@ -93,35 +109,42 @@ body {
 	margin-right: 20px;
 	color: yellow;
 }
+
 #level-exp {
 	display: grid;
 	grid-template-columns: auto auto;
 }
+
 #level-display {
 	justify-self: start;
 	margin-left: 4px;
 }
+
 #exp-display {
 	justify-self: end;
 	margin-right: 4px;
 }
-#exp-bar {	
+
+#exp-bar {
 	background: rgb(15, 15, 15);
 	box-shadow: inset 1px 1px #2e271c, inset -1px -1px #685f50;
 }
+
 #action-bar {
 	background: rgb(15, 15, 15);
 	box-shadow: inset 1px 1px #2e271c, inset -1px -1px #685f50;
 }
+
 #exp-progress {
 	background: rgb(255, 255, 0);
 	box-shadow: inset 1px 1px rgb(255, 255, 175), inset -1px -1px rgb(170, 170, 0);
 	height: 100%;
 	width: 0%;
 }
+
 #action-progress {
-    background: rgb(255, 155, 0);
-    box-shadow: inset 1px 1px rgb(255, 175, 100), inset -1px -1px rgb(182, 100, 0);
+	background: rgb(255, 155, 0);
+	box-shadow: inset 1px 1px rgb(255, 175, 100), inset -1px -1px rgb(182, 100, 0);
 	height: 100%;
 	width: 0%;
 }
@@ -143,18 +166,22 @@ body {
 	height: 206px;
 	color: rgb(255, 155, 0);
 }
-#title-left, #title-right {
+
+#title-left,
+#title-right {
 	justify-self: center;
 }
-#menu-left, #menu-right {
-    background-color: rgb(58, 60, 40);
+
+#menu-left,
+#menu-right {
+	background-color: rgb(58, 60, 40);
 	box-shadow: inset -1px -1px rgb(90, 82, 69), inset 1px 1px rgb(45, 39, 28);
 	overflow: auto;
 }
+
 #menu-left {
 	padding: 2px;
 }
-
 
 /* ACTION MENU */
 
@@ -163,12 +190,12 @@ body {
 	grid-template-columns: 36px auto;
 	grid-template-rows: auto auto;
 	margin-top: 2px;
-    margin-left: 3px;
-    margin-right: 3px;
-    margin-bottom: 0px;
-    padding: 3px;
+	margin-left: 3px;
+	margin-right: 3px;
+	margin-bottom: 0px;
+	padding: 3px;
 	box-shadow: inset 1px 1px rgb(90, 82, 69), inset -1px -1px rgb(45, 39, 28);
-	background: rgb(73,64, 52);
+	background: rgb(73, 64, 52);
 }
 
 .action-plate img {
@@ -179,53 +206,55 @@ body {
 /* Action Button */
 .action-button {
 	background-color: rgb(100, 85, 70);
-    border: 1px solid black;
-    border-radius: 3px;
-    box-shadow: inset -1px -1px rgb(65, 48, 57), inset 1px 1px rgb(126, 111, 92), inset -2px -2px rgb(72, 65, 54), inset 2px 2px rgb(103, 96, 77);
-    padding-top: 2px;
-    padding-bottom: 4px;
-    color: rgb(255, 155, 0);
-    text-shadow: 1px 1px black;
-    cursor: pointer;
+	border: 1px solid black;
+	border-radius: 3px;
+	box-shadow: inset -1px -1px rgb(65, 48, 57), inset 1px 1px rgb(126, 111, 92), inset -2px -2px rgb(72, 65, 54), inset 2px 2px rgb(103, 96, 77);
+	padding-top: 2px;
+	padding-bottom: 4px;
+	color: rgb(255, 155, 0);
+	text-shadow: 1px 1px black;
+	cursor: pointer;
 	text-align: center;
 	align-self: center;
 }
+
 .action-button {
-    /* Button lighting with sharp corners */
-    box-shadow: inset -1px 0px rgb(65, 48, 57), inset 0px -1px rgb(65, 48, 57), inset 1px 0px rgb(126, 111, 92), inset 0px 1px rgb(126, 111, 92), inset -2px 0px rgb(72, 65, 54), inset 0px -2px rgb(72, 65, 54), inset 2px 0px rgb(103, 96, 77), inset 0px 2px rgb(103, 96, 77);
+	/* Button lighting with sharp corners */
+	box-shadow: inset -1px 0px rgb(65, 48, 57), inset 0px -1px rgb(65, 48, 57), inset 1px 0px rgb(126, 111, 92), inset 0px 1px rgb(126, 111, 92), inset -2px 0px rgb(72, 65, 54), inset 0px -2px rgb(72, 65, 54), inset 2px 0px rgb(103, 96, 77), inset 0px 2px rgb(103, 96, 77);
 }
 .action-button:hover {
-    filter: brightness(1.15);
+	filter: brightness(1.15);
 }
 .action-button:active {
-    box-shadow: inset -1px 0px rgb(126, 111, 92), inset 0px -1px rgb(126, 111, 92), inset 1px 0px rgb(65, 48, 57), inset 0px 1px rgb(65, 48, 57), inset -2px 0px rgb(103, 96, 77), inset 0px -2px rgb(103, 96, 77), inset 2px 0px rgb(72, 65, 54), inset 0px 2px rgb(72, 65, 54);
-    /* Translates text within the button */
-    padding-top: 4px;
-    padding-bottom: 2px;
-    padding-left: 2px;
+	box-shadow: inset -1px 0px rgb(126, 111, 92), inset 0px -1px rgb(126, 111, 92), inset 1px 0px rgb(65, 48, 57), inset 0px 1px rgb(65, 48, 57), inset -2px 0px rgb(103, 96, 77), inset 0px -2px rgb(103, 96, 77), inset 2px 0px rgb(72, 65, 54), inset 0px 2px rgb(72, 65, 54);
+	/* Translates text within the button */
+	padding-top: 4px;
+	padding-bottom: 2px;
+	padding-left: 2px;
 }
 .action-button.disabled {
-    box-shadow: inset -1px 0px rgb(126, 111, 92), inset 0px -1px rgb(126, 111, 92), inset 1px 0px rgb(65, 48, 57), inset 0px 1px rgb(65, 48, 57), inset -2px 0px rgb(103, 96, 77), inset 0px -2px rgb(103, 96, 77), inset 2px 0px rgb(72, 65, 54), inset 0px 2px rgb(72, 65, 54);
-    opacity: 0.5;
-	cursor: auto;
-	/* Translates text within the button */
-    padding-top: 4px;
-    padding-bottom: 2px;
-    padding-left: 2px;
-}
-.cusDisabled {
 	box-shadow: inset -1px 0px rgb(126, 111, 92), inset 0px -1px rgb(126, 111, 92), inset 1px 0px rgb(65, 48, 57), inset 0px 1px rgb(65, 48, 57), inset -2px 0px rgb(103, 96, 77), inset 0px -2px rgb(103, 96, 77), inset 2px 0px rgb(72, 65, 54), inset 0px 2px rgb(72, 65, 54);
-    opacity: 0.5;
+	opacity: 0.5;
 	cursor: auto;
 	/* Translates text within the button */
-    padding-top: 4px;
-    padding-bottom: 2px;
-    padding-left: 2px;
-}
-.action-button.disabled:hover, .cusDisabled:hover {
-	filter: brightness(1);
+	padding-top: 4px;
+	padding-bottom: 2px;
+	padding-left: 2px;
 }
 
+.cusDisabled {
+	box-shadow: inset -1px 0px rgb(126, 111, 92), inset 0px -1px rgb(126, 111, 92), inset 1px 0px rgb(65, 48, 57), inset 0px 1px rgb(65, 48, 57), inset -2px 0px rgb(103, 96, 77), inset 0px -2px rgb(103, 96, 77), inset 2px 0px rgb(72, 65, 54), inset 0px 2px rgb(72, 65, 54);
+	opacity: 0.5;
+	cursor: auto;
+	/* Translates text within the button */
+	padding-top: 4px;
+	padding-bottom: 2px;
+	padding-left: 2px;
+}
+
+.action-button.disabled:hover, .cusDisabled:hover {
+	filter: none;
+}
 #action-info {
 	display: grid;
 	grid-template-columns: auto auto;
@@ -241,27 +270,27 @@ body {
 }
 
 
-
-/* MINIMAP */
-
 #minimap-container {
 	grid-column-start: 2;
 	grid-column-end: 3;
 	grid-row-start: 1;
 	grid-row-end: 2;
 }
+
 #textbox {
 	grid-column-start: 1;
 	grid-column-end: 2;
 	grid-row-start: 3;
 	grid-row-end: 4;
 }
+
 #textbox-settings {
 	grid-column-start: 1;
 	grid-column-end: 2;
 	grid-row-start: 4;
 	grid-row-end: 5;
 }
+
 #sidebar-container {
 	grid-column-start: 2;
 	grid-column-end: 3;
@@ -279,6 +308,12 @@ body {
 	grid-template-columns: 38px 33px 33px 33px 33px 33px 38px;
 	grid-template-rows: 36px;
 }
+#sidebar-menu-bottom {
+	display: grid;
+	grid-template-columns: 38px 33px 33px 33px 33px 33px 38px;
+	grid-template-rows: 36px;
+}
+
 /* TOP MENU TAB SPRITES */
 #sidebar-menu-top .combat {background: url("images/Tab Sprites.png") 0px 0px;}
 #sidebar-menu-top .skills {background: url("images/Tab Sprites.png") -38px 0px;}
@@ -296,11 +331,6 @@ body {
 #sidebar-menu-top .prayer-selected {background: url("images/Tab Sprites.png") -170px -73px;}
 #sidebar-menu-top .spells-selected {background: url("images/Tab Sprites.png") -203px -73px;}
 
-#sidebar-menu-bottom {
-	display: grid;
-	grid-template-columns: 38px 33px 33px 33px 33px 33px 38px;
-	grid-template-rows: 36px;
-}
 /* BOTTOM MENU TAB SPRITES */
 #sidebar-menu-bottom .botmenu1 {background: url("images/Tab Sprites.png") 0px -36px;}
 #sidebar-menu-bottom .botmenu2 {background: url("images/Tab Sprites.png") -38px -36px;}
@@ -318,12 +348,13 @@ body {
 #sidebar-menu-bottom .botmenu6-selected {background: url("images/Tab Sprites.png") -170px -109px;}
 #sidebar-menu-bottom .botmenu7-selected {background: url("images/Tab Sprites.png") -203px -109px;}
 
-
 #sidebar-panel {
 	width: 186px;
-	height: 262px;
+	height: 260px;
 	margin: auto;
+	margin-top: 2px;
 }
+
 
 /* SKILLS PANEL */
 
@@ -333,6 +364,7 @@ body {
 	grid-template-rows: 32px 32px 32px 32px 32px 32px 32px 32px;
 	background: url("images/Skills No Levels.png") 0px 0px;
 }
+
 /* Disable image dragging */
 #skills-container img {
 	/* user-drag: none;  */
@@ -346,8 +378,21 @@ body {
 .skill {
 	opacity: 0;
 }
+
 .skill:hover {
 	opacity: 0.1;
+}
+
+
+/* INVENTORY PANEL */
+
+#inventory-container {
+	display: grid;
+	grid-template-columns: 32px 32px 32px 32px;
+	grid-template-rows: 32px 32px 32px 32px 32px 32px 32px;
+	grid-column-gap: 10px;
+	grid-row-gap: 4px;
+	justify-content: center;
 }
 
 
@@ -355,20 +400,23 @@ body {
 
 /* width */
 #menu-left::-webkit-scrollbar {
-    width: 3px;
+	width: 3px;
 }
+
 /* Track */
 #menu-left::-webkit-scrollbar-track {
-  background: #222; 
-  border-radius: 2px;
-  background-color: transparent;
+	background: #222;
+	border-radius: 2px;
+	background-color: transparent;
 }
+
 /* Handle */
 #menu-left::-webkit-scrollbar-thumb {
-  background: #777; 
-  border-radius: 2px;
+	background: #777;
+	border-radius: 2px;
 }
+
 /* Handle on hover */
 #menu-left::-webkit-scrollbar-thumb:hover {
-  background: #888; 
+	background: #888;
 }
